# FAIP

./: README.md
Project/: Data_Analysis.ipynb  Data_Hexagon_merging.ipynb  Model_Training.ipynb  afterpre.ipynb  check.ipynb  final_merging.ipynb  model.ipynb  model3.ipynb  model4.ipynb  model_comparison_results.csv  pbfnewyork.ipynb  populations.ipynb  position.ipynb  tabnet_hyperparameter_search_results3.csv
exam/: try.ipynb  yuxiao.docx
week2/: Assignment_many_objectives_optimization (1).ipynb  Assignment_many_objectives_optimization.ipynb  Assignment_part2.ipynb  convergence.csv  objectives_only.csv  results.csv
week2/Assignment - Combinatorial Optimisation/checkers/: README.md  pyproject.toml
week2/Assignment - Combinatorial Optimisation/checkers/graph_coloring/: grade.py
week2/Assignment - Combinatorial Optimisation/checkers/set-cover/: grade-explicit.py  grade.py
week2/Assignment - Combinatorial Optimisation/checkers/set-cover/dzn/: large-2.dzn  large-3.dzn  large-4.dzn  medium-1.dzn  medium-3.dzn  small-1.dzn  small-3.dzn
week2/Assignment - Combinatorial Optimisation/checkers/sports_scheduling/: grade.py
week2/Assignment - Combinatorial Optimisation/checkers/sports_scheduling/dzn/: large-1.dzn  small-1.dzn
week3/: 1_intro_regression.ipynb  classification_training (2).ipynb  evaluation_overfitting.ipynb  svm_dectree (2).ipynb  svm_dectree_part2.ipynb
week4/: College10.csv  Shrinkage and Variable Selection.ipynb
week5/: 5de.md  q_learning.ipynb
week7/: FAIP_computervision_assignment.ipynb  FAIP_computervision_tutorial.ipynb
(+33 files in other folders)
